@@ -118,6 +118,9 @@ Cisco IOS-XR boxes
 .TP
 .B zrancid
 Zebra routing software
+.TP
+.B zyrancid
+ZyXel switches
 .PP
 The command-line options are as follows:
 .TP
